@@ -1,3 +1,7 @@
+2011-09-23  Petasis George  <petasis@iit.demokritos.gr>
+        * win/OleDND.h: Modified STRING_(s), to ease compilation with MinGW.
+        Patch provided by Hans-Christoph Steiner. SF Bug ID: 3411338.
+
 2011-09-22  Petasis George  <petasis@iit.demokritos.gr>
         * win/OleDND.h: Added a check if CF_DIBV5 is defined (i.e.
         WINVER < 0x0500). SF Bug ID: 3411338.
